--- a/angular/alurapic/package.json
+++ b/angular/alurapic/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.6",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
+    "jwt-decode": "^2.2.0",
     "rxjs": "~6.5.4",
     "save": "^2.4.0",
     "tslib": "^1.10.0",
